# connected-people

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: code-check.yml  test.yml
app/: api.py  connect.py  mongo.py  settings.py
app/client/: __init__.py  exceptions.py  github.py  twitter.py
tests/: test_api.py  test_api_endpoints.py  test_connect.py  test_github_client.py  test_twitter_client.py
